# Video_Assistent_Feedback

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
src/video_assistant_feedback/: __init__.py  analyze.py  cli.py  config.py  extract.py  pipeline.py  scenes.py  transcribe.py
