[project]
name = "video-assistant-feedback"
version = "0.1.0"
description = "Local, offline pipeline for AI-assisted video review using Ollama vision models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ollama>=0.4.0",
]

# Optional audio transcription support (heavy: pulls torch).
# Install with: uv sync --extra whisper
[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]

[project.scripts]
video-review = "video_assistant_feedback.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_assistant_feedback"]
